--- a/style.css
+++ b/style.css
@@ -6,89 +6,55 @@
     box-sizing: border-box;
 }
 
-#bg_video {
-    width: 100%;
-    height: 100vh;
-    object-fit: cover;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-}
-
-
-
-html, body{
-  height: 100%;
-  font-weight: 800;
-  margin: 0;
-  padding: 0;
-}
-
-body{
-  background: #fff;
-  font-family: Arial;
-}
-
-.container {
-  display: flex;
-/*   border:1px solid red; */
-  height: 100%;
-  align-items: center;
-}
-
-svg {
-    display: block;
-    font: 10.5em 'Montserrat';
-    width: 960px;
-    height: 300px;
-    margin: 0 auto;
-}
-
-.text-copy {
-    fill: none;
-    stroke: white;
-    stroke-dasharray: 6% 29%;
-    stroke-width: 5px;
-    stroke-dashoffset: 0%;
-    animation: stroke-offset 5.5s infinite linear;
-}
-
-.text-copy:nth-child(1){
-	stroke: #4D163D;
-	animation-delay: -1;
-}
-
-.text-copy:nth-child(2){
-	stroke: #840037;
-	animation-delay: -2s;
-}
-
-.text-copy:nth-child(3){
-	stroke: #BD0034;
-	animation-delay: -3s;
-}
-
-.text-copy:nth-child(4){
-	stroke: #BD0034;
-	animation-delay: -4s;
-}
-
-.text-copy:nth-child(5){
-	stroke: #FDB731;
-	animation-delay: -5s;
-}
-
-.text-copy:nth-child(6){
-	stroke: #BD0034;
-	animation-delay: -6s;
-}
-
-@keyframes stroke-offset{
-	100% {stroke-dashoffset: -35%;}
-}
-
-#Mont {
+main {
     position: relative;
-    top: 100px;
+    width: 100%;
+    height: 700px;
+    background-color: aqua;
+}
+
+header {
+    width: 100%;
+    height: 90px;
+    background: linear-gradient(89.8deg, #BD0034 0.4%, #BD0034 20.96%, #A20030 34.98%, #7F002B 50.03%, #6E0028 66.64%, #580025 89.99%);
+}
+
+header h1 {
+    width: 20%;
+    position: relative;
+    font:'Montserrat';
+    color: #FF3E00;
+    top: 20px;
+    left: 10px;
+    font-size: 40px;
+    display: flex;
+    float: left;
+}
+
+.nav {
+    width: 50%;
+    height: 40px;
+    position: relative;
+    display: flex;
+    left: 100px;
+    top: 25px;
+    margin: auto;
+    justify-content: space-around;
+    text-align: center;
+    float: left;
+}
+.nav li{
+    list-style: none;
+    display: inline-block;
+    margin: 10px;
+    margin-left: 70px;
+}
+
+.nav a {
+    text-decoration: none;
+    color:#FF3E00;
+}
+
+.linha {
+    border: 1px solid #FC4308;
 }
