--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
-@import url(https://fonts.googleapis.com/css?family=Montserrat);
+@font-face {
+    font-family: monte;
+    src: url(/Fonts/Montserrat-VariableFont_wght.ttf);
+  }
 
 * {
     margin: 0;
@@ -22,7 +25,7 @@ header {
 header h1 {
     width: 20%;
     position: relative;
-    font:'monte';
+    font-family: monte;
     color: #FF3E00;
     top: 20px;
     left: 10px;
