--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ header h1 {
     width: 20%;
     position: relative;
     font-family: monte;
+    font-style: normal;
     color: #FF3E00;
     top: 20px;
     left: 10px;
