--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ header {
 header h1 {
     width: 20%;
     position: relative;
-    font-family: monte;
+    font-family: 'Montserrat';
     font-style: normal;
     color: #FF3E00;
     top: 20px;
