--- a/style.css
+++ b/style.css
@@ -93,20 +93,19 @@ section {
 .container {
     position: relative;
     background-size: cover;
-    width: 39.1%;
+    width: 39.2%;
     background: url(./assets/Rosania.png);
     background-size: cover;
-    height: 90%;
+    height: 81.1%;
     display: flex;
     float: left;
-    left: 860px;
-    top: -350px;
+    left: 760px;
+    top: -360px;
 }
 
 .santos {
     position: relative;
-    width: 45%;
-    background-color: #00fe00 ;
+    width: 40%;
     box-sizing: border-box;
     height: 400px;
     top: 200px;
@@ -115,11 +114,23 @@ section {
 
 #h1 {
     position: relative;
-    background-color: #580025;
     font-size: 45px;
     width: 100%;
     height: 90px;
     display: flex;
     clear: left;
+    color: #FC4308;
+    font-family: 'Montserrat', sans-serif;
+    font-style:normal;
+}
+
+#p {
+    position: relative;
+    width: 100%;
+    height: 120px;
+    color: #ffffff;
+    font-family: 'Montserrat', sans-serif;
+    font-style:normal; 
+    font-size: 20px;
 }
 
