--- a/style.css
+++ b/style.css
@@ -217,7 +217,6 @@ section {
     width: 100%;
     height: 90px;
     top: 545px;
-  background-color: blueviolet;
 }
 
 #ele {
@@ -225,7 +224,6 @@ section {
     width: 20%;
     height: 70px;
     left: 20px;
-    background-color: #fff;
 }
 
 #ele h4 {
@@ -258,7 +256,6 @@ section {
     height: 70px;
     left: 355px;
     top: -78px;
-    background-color: #fff;
 }
 #ele1 h4 {
     position: relative;
@@ -283,6 +280,90 @@ section {
     font-style:normal;
     font-size: 18px;
     margin-top: 10px;
+}
+
+#ele3 {
+    position: relative;
+    width: 20%;
+    height: 70px;
+    left: 698px;
+    top: -156px;
+}
+
+#ele3 h4 {
+    position: relative;
+    width:100%;
+    height: 0px;
+    color:#fc4308;
+    top: -618px;
+    font-family: 'Montserrat', sans-serif;
+    font-style:normal;
+    background-color: #A20030;
+    font-size: 19px;
+    margin-top: 8px;
+}
+
+#ele3 p {
+    position: relative;
+    width:100%;
+    height: 0px;
+    color:#fc4308;
+    top:-598px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-style:normal;
+    font-size: 18px;
+    margin-top: 10px;
+}
+
+#ele4 {
+    position: relative;
+    width: 20%;
+    height: 70px;
+    left: 1025px;
+    top: -234px;
+}
+
+#ele4 h4 {
+    position: relative;
+    width:100%;
+    height: 0px;
+    color:#fc4308;
+    top: -540px;
+    font-family: 'Montserrat', sans-serif;
+    font-style:normal;
+    background-color: #A20030;
+    font-size: 19px;
+    margin-top: 8px;
+}
+
+#ele4 p {
+    position: relative;
+    width:100%;
+    height: 0px;
+    color:#fc4308;
+    top:-520px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-style:normal;
+    font-size: 18px;
+    margin-top: 10px;
+}
+
+#ele5 {
+    position: relative;
+    width: 8%;
+    height: 25px;
+    left: -10px;
+    top: -200px;
+    color:#fc4308;
+    background-color: #ffffff00;
+    border: 2px solid #fc4308;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+#ele5:hover {
+    color:#f03e03;
+    cursor: pointer;
 }
 
 
