--- a/style.css
+++ b/style.css
@@ -370,5 +370,76 @@ section {
     cursor: pointer;
 }
 
+.container2 {
+    position: relative;
+    width: 100%;
+    height: 480px;
+    background: linear-gradient(89.88deg, #BD0034 0.15%, #580025 99.94%);
+}
+
+#gabriela {
+    position: relative;
+    width: 35%;
+    height: 456.2px;
+    left: 805px;
+    top: 10px;
+    background: url(./assets/Gabriela.png);
+    background-size: cover;
+}
+
+.gab {
+    position: relative;
+    width: 40%;
+    box-sizing: border-box;
+    height: 400px;
+    top: -200px;
+    left: 90px;
+    background-color: #FFf;
+}
+
+#h11 {
+    position: relative;
+    font-size: 60px;
+    width: 40%;
+    height: 90px;
+    display: flex;
+    clear: left;
+    top: -325px;
+    left: 190px;
+    color: #FC4308;
+    font-family: 'Montserrat', sans-serif;
+    font-style:normal;
+}
+
+#pp {
+    position: relative;
+    width: 40%;
+    height: 120px;
+    color: #ffffff;
+    top: -330px;
+    left: 250px;
+    font-family: 'Montserrat', sans-serif;
+    font-style:normal; 
+    font-size: 30px;
+}
+
+#gab5 {
+    position: relative;
+    width: 9%;
+    height: 40px;
+    left: 320px;
+    top: -390px;
+    color:#fc4308;
+    background-color: #ffffff00;
+    border: 2px solid #fc4308;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+#gab5:hover {
+    color:#f03e03;
+    cursor: pointer;
+}
+
 
 
