--- a/style.css
+++ b/style.css
@@ -9,8 +9,13 @@
 main {
     position: relative;
     width: 100%;
-    height: 2000px;
-    background-color: aqua;
+    height: auto;
+}
+
+body {
+    position: relative;
+    width: 100%;
+    height: auto;
 }
 
 header {
@@ -1448,3 +1453,80 @@ section {
   ul li:nth-child(2) a:hover .fab {
     color: #28A02D;
   }
+
+footer {
+    position: relative;
+    width: 100%;
+    height: 400px;
+    background: linear-gradient(89.88deg, #BD0034 0.15%, #580025 99.94%);
+}
+
+.logo_footer {
+    position: relative;
+    width: 20%;
+    height: 160px;
+    left: 20px;
+    top: 100px;
+}
+
+.logo_footer h1 {
+    position: relative;
+    color: #fff;
+    font-family: 'Montserrat', sans-serif;
+    font-style:normal;
+    font-size: 69px;
+    text-align: center;
+}
+
+.informacoes {
+    position: relative;
+    width: 20%;
+    height: 200px;
+    left: 500px;
+    top: -80px;
+}
+
+.informacoes h3 {
+    position: relative;
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+    font-style:normal;
+    font-size: 25px;
+    color: #FC4308;
+}
+
+.informacoes p {
+    position: relative;
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+    font-style:normal;
+    font-size: 20px;
+    line-height: 24px;
+    color: #ffffff;
+}
+.mapa {
+    position: relative;
+    left: 890px;
+    width: 20%;
+    top: -300px;
+}
+
+footer .linha {
+    position: relative;
+    top: -230px;
+}
+ footer .final {
+    position: relative;
+    width: 100%;
+    height: 50px;
+    top: -229px;
+    background: #530019;
+    text-align: center;
+}
+
+footer .final p {
+    position: relative;
+    top: 15px;
+    color: #fff;
+    
+}
