--- a/style.css
+++ b/style.css
@@ -1088,7 +1088,7 @@ section {
     border: 2px solid #fc4308;
     border-radius: 3px;
     cursor: pointer;
-    background: url(./assets/cima1.jpg);
+    background: url(./assets/baixo1.jpg);
     background-size: cover;
     z-index: 1;
 }
@@ -1103,7 +1103,7 @@ section {
     border: 2px solid #fc4308;
     border-radius: 3px;
     cursor: pointer;
-    background: url(./assets/cima2.jpg);
+    background: url(./assets/baixo300.png);
     background-size: cover;
     z-index: 2;
 }
@@ -1118,7 +1118,7 @@ section {
     border: 2px solid #fc4308;
     border-radius: 3px;
     cursor: pointer;
-    background: url(./assets/cima3.jpg);
+    background: url(./assets/Baixo3.jpg);
     background-size: cover;
     z-index: 3;
 }
@@ -1134,7 +1134,7 @@ section {
     border: 2px solid #fc4308;
     border-radius: 3px;
     cursor: pointer;
-    background: url(./assets/cima4.jpg);
+    background: url(./assets/baixo40.jpg);
     background-size: cover;
     z-index: 3;
 }
@@ -1409,7 +1409,7 @@ section {
     display:flex;
   }
   
-  ul li {
+  #Xu ul li {
     list-style: none;
   }
   
@@ -1429,12 +1429,12 @@ section {
     transition: .5s;
   }
   
-  ul li a:hover {
+ #Xu ul li a:hover {
     box-shadow: 0 2px 5px rgba(0,0,0,0.3);
     text-decoration:none;
   }
   
-  ul li a .fab {
+ #Xu ul li a .fab {
     width: 100%;
     height:100%;
     display:block;
@@ -1446,11 +1446,11 @@ section {
     transition: .5s;
   }
   
-  ul li:nth-child(1) a:hover .fab {
+ #Xu ul li:nth-child(1) a:hover .fab {
     color: #BD0034;
   }
   
-  ul li:nth-child(2) a:hover .fab {
+ #Xu ul li:nth-child(2) a:hover .fab {
     color: #28A02D;
   }
 
