--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap');
 
+
 * {
     margin: 0;
     padding: 0;
@@ -119,7 +120,7 @@ section {
 
 #h1 {
     position: relative;
-    font-size: 45px;
+    font-size: 48px;
     width: 100%;
     height: 90px;
     display: flex;
@@ -129,14 +130,18 @@ section {
     font-style:normal;
 }
 
+
+
 #p {
     position: relative;
-    width: 100%;
-    height: 120px;
+    width: 90%;
+    height: 150px;
     color: #ffffff;
     font-family: 'Montserrat', sans-serif;
-    font-style:normal; 
+    font-style:normal;
+    left: 20px; 
     font-size: 20px;
+    text-align: center;
 }
 
 .elegancia {
@@ -1384,6 +1389,7 @@ section {
     background-size: cover;
     width: 35%;
     top: 0px;
+    left: 50px;
     height: 670px;
 }
 
