--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ section {
 
 .santos {
     position: relative;
-    width: 40%;
+    width: 42%;
     box-sizing: border-box;
     height: 400px;
     top: 200px;
@@ -130,7 +130,7 @@ section {
 
 #h1 {
     position: relative;
-    font-size: 48px;
+    font-size: 49px;
     width: 100%;
     height: 90px;
     display: flex;
@@ -138,8 +138,9 @@ section {
     color: #FC4308;
     font-family: 'Montserrat', sans-serif;
     font-style:normal;
+    -webkit-text-stroke-color: #FC4308;/*borda da escrita*/
+    -webkit-text-stroke-width: 1.2px;
 }
-
 
 
 #p {
@@ -149,7 +150,7 @@ section {
     color: #ffffff;
     font-family: 'Montserrat', sans-serif;
     font-style:normal;
-    left: 20px; 
+    left: 19px; 
     font-size: 20px;
     text-align: center;
 }
